fix: lazy-init offcanvas maps + sidebar click
- initMaps: skip maps inside hidden offcanvases, init on shown.bs.offcanvas
- shown.bs.offcanvas handler: call initWrapper for uninitialised maps
- bootstrap_post-nav.php: defer inst lookup past lazy-init microtask (setTimeout 0)
- yandex-maps.css: add position:relative to wrapper for correct sidebar placement

--- a/functions/integrations/yandex-maps/assets/css/yandex-maps.css
+++ b/functions/integrations/yandex-maps/assets/css/yandex-maps.css
@@ -6,6 +6,7 @@
  */
 
 .codeweber-yandex-map-wrapper {
+    position: relative;
     min-height: 200px;
 }
 
